--- a/4. Functions/4.1 Built in Functions/built_in_func_tasks.ipynb
+++ b/4. Functions/4.1 Built in Functions/built_in_func_tasks.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Gabe-flomo/Python-Course/blob/main/Modules/4.%20Functions/4.1%20Built%20in%20Functions/built_in_func_tasks.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -26,7 +26,7 @@
         "id": "4SbGIezw4BLi"
       },
       "source": [
-        "***Double click to edit***"
+        "***A built in function is a function that was already written and comes with the python language***"
       ]
     },
     {
@@ -48,13 +48,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "xjsCiPbK4BLi"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Is the sum of the min and max value > than the sum of the list? False\n",
+            "Min value: -96\n",
+            "Max value: 98\n",
+            "Min + Max: 2\n",
+            "Sum of the list: 377\n"
+          ]
+        }
+      ],
       "source": [
-        "#TODO"
+        "#TODO\n",
+        "from random import randint"
       ]
     },
     {
@@ -72,6 +85,24 @@
         "range = 99\n",
         "```"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "83"
+            ]
+          },
+          "execution_count": 25,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -92,15 +123,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
         "id": "07GRmFAR4BLi"
       },
-      "outputs": [],
-      "source": [
-        "from random import choice\n",
-        "var = [f'file_{x}.{choice([\"wav\", \"mp3\", \"mp4\", \"mov\"])}' for x in range(20)]"
-      ]
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1) file_0.mov\n",
+            "2) file_1.mov\n",
+            "3) file_2.mp4\n",
+            "4) file_3.mp3\n",
+            "5) file_4.mp3\n",
+            "6) file_5.wav\n",
+            "7) file_6.wav\n",
+            "8) file_7.wav\n",
+            "9) file_8.mp4\n",
+            "10) file_9.mp4\n",
+            "11) file_10.mp3\n",
+            "12) file_11.mov\n",
+            "13) file_12.mp4\n",
+            "14) file_13.wav\n",
+            "15) file_14.mov\n",
+            "16) file_15.wav\n",
+            "17) file_16.mp3\n",
+            "18) file_17.mp3\n",
+            "19) file_18.wav\n",
+            "20) file_19.mov\n"
+          ]
+        }
+      ],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -121,13 +176,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
         "id": "tsGeXR3O4BLj"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['file_0.mp4',\n",
+              " 'file_1.mp4',\n",
+              " 'file_2.mp4',\n",
+              " 'file_3.wav',\n",
+              " 'file_4.wav',\n",
+              " 'file_5.wav',\n",
+              " 'file_6.wav',\n",
+              " 'file_7.wav',\n",
+              " 'file_8.mp4',\n",
+              " 'file_9.mp4',\n",
+              " 'file_10.wav',\n",
+              " 'file_11.mp4',\n",
+              " 'file_12.mp4',\n",
+              " 'file_13.wav',\n",
+              " 'file_14.mp4',\n",
+              " 'file_15.wav',\n",
+              " 'file_16.wav',\n",
+              " 'file_17.wav',\n",
+              " 'file_18.wav',\n",
+              " 'file_19.mp4']"
+            ]
+          },
+          "execution_count": 30,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "#TODO"
+        "#TODO\n",
+        "\n"
       ]
     },
     {
@@ -148,13 +234,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "id": "SINJnMHm4BLj"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[('file_0', 'mp4'),\n",
+              " ('file_1', 'mp4'),\n",
+              " ('file_2', 'mp4'),\n",
+              " ('file_3', 'wav'),\n",
+              " ('file_4', 'wav'),\n",
+              " ('file_5', 'wav'),\n",
+              " ('file_6', 'wav'),\n",
+              " ('file_7', 'wav'),\n",
+              " ('file_8', 'mp4'),\n",
+              " ('file_9', 'mp4'),\n",
+              " ('file_10', 'wav'),\n",
+              " ('file_11', 'mp4'),\n",
+              " ('file_12', 'mp4'),\n",
+              " ('file_13', 'wav'),\n",
+              " ('file_14', 'mp4'),\n",
+              " ('file_15', 'wav'),\n",
+              " ('file_16', 'wav'),\n",
+              " ('file_17', 'wav'),\n",
+              " ('file_18', 'wav'),\n",
+              " ('file_19', 'mp4')]"
+            ]
+          },
+          "execution_count": 31,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "#TODO   "
+        "#TODO  \n"
       ]
     },
     {
@@ -169,13 +285,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "id": "AtFS9eRZ4BLj"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 33,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "#TODO"
+        "#TODO\n"
       ]
     },
     {
@@ -190,14 +317,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "id": "8DmtwSYW4BLj"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 36,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "values = [1, 43.2, \"43.2\", 54.554, \"332\"]\n",
-        "#TODO"
+        "#TODO\n"
       ]
     },
     {
@@ -267,6 +405,11 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "name": "built_in_func_tasks.ipynb",
+      "provenance": []
+    },
     "interpreter": {
       "hash": "f1a916808f2d29f1a5fbd48aa1cb9129993ca703ecce713879d0cd946e898e32"
     },
@@ -287,12 +430,7 @@
       "pygments_lexer": "ipython3",
       "version": "3.9.7"
     },
-    "orig_nbformat": 4,
-    "colab": {
-      "name": "built_in_func_tasks.ipynb",
-      "provenance": [],
-      "include_colab_link": true
-    }
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
