--- a/4. Functions/4.1 Built in Functions/in_class_demo.ipynb
+++ b/4. Functions/4.1 Built in Functions/in_class_demo.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Gabe-flomo/Python-Course/blob/main/Modules/4.%20Functions/4.1%20Built%20in%20Functions/in_class_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -154,14 +154,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "GzbA0HHD39cX"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "4\n",
+            "761\n",
+            "1654\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "(None, None, None)"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#TODO Find the minumum, maximum, and sum of the list\n",
-        "var = [34, 32, 543, 5, 222, 53, 761, 4]\n"
+        "var = [34, 32, 543, 5, 222, 53, 761, 4]\n",
+        "print(min(var)), print(max(var)), print(sum(var))\n"
       ]
     },
     {
@@ -193,14 +214,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "8RivMyjp39cY"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[(1, 'red'), (2, 'blue'), (3, 'green')]"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#TODO create an enumerated list from the list of colors starting at 1\n",
-        "var = ['red', 'blue', 'green']\n"
+        "var = ['red', 'blue', 'green']\n",
+        "enum = list(enumerate(var, start = 1))\n",
+        "enum"
       ]
     },
     {
@@ -235,26 +269,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "WAFcKOri39cZ"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "country at position 0 is France\n",
+            "country at position 1 is Italy\n",
+            "country at position 2 is Egypt\n",
+            "country at position 3 is Liberia\n",
+            "country at position 4 is Mexico\n"
+          ]
+        }
+      ],
       "source": [
-        "#TODO loop over the list of countries and print out the iteration \n",
-        "countries = [\"France\", \"Italy\", \"Egypt\", \"Liberia\", \"Mexico\"]\n"
+        "#TODO loop over the list of countries and print out the iteration number \n",
+        "countries = [\"France\", \"Italy\", \"Egypt\", \"Liberia\", \"Mexico\"]\n",
+        "for index, element in enumerate(countries):\n",
+        "    print(f\"country at position {index} is {element}\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "49dUd2tP39cZ"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['FRANCE', 'ITALY', 'EGYPT', 'LIBERIA', 'MEXICO']"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#TODO loop over the list of countries but update the list to capitalize the countries as we iterate through them\n",
-        "countries = [\"France\", \"Italy\", \"Egypt\", \"Liberia\", \"Mexico\"]"
+        "countries = [\"France\", \"Italy\", \"Egypt\", \"Liberia\", \"Mexico\"]\n",
+        "for index, element in enumerate(countries):\n",
+        "    countries[index] = element.upper()\n",
+        "\n",
+        "countries"
       ]
     },
     {
@@ -277,15 +340,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "MFYWmxvM39cZ"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[('france', 2000000), ('italy', 1500000), ('rome', 1000000)]"
+            ]
+          },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#TODO zip the county and population lists together\n",
         "country = [\"france\", \"italy\", \"rome\"]\n",
-        "population = [2000000, 1500000, 1000000]"
+        "population = [2000000, 1500000, 1000000]\n",
+        "results = list(zip(country, population))\n",
+        "results"
       ]
     },
     {
@@ -308,15 +384,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "8D-w6XJ539ca"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The country france has a population of 2000000\n",
+            "The country italy has a population of 1500000\n",
+            "The country rome has a population of 1000000\n"
+          ]
+        }
+      ],
       "source": [
         "#TODO loop over the counties and populations lists and print each countries population\n",
         "country = [\"france\", \"italy\", \"rome\"]\n",
-        "population = [2000000, 1500000, 1000000]\n"
+        "population = [2000000, 1500000, 1000000]\n",
+        "for countries, pop in zip(country, population):\n",
+        "    print(f\"The country {countries} has a population of {pop}\")"
       ]
     },
     {
@@ -354,37 +442,72 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "COgN2qKI39ca"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 15,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#TODO Determine if any of the students passed the test (doesn't matter which)\n",
         "students = [\"Oliver\", \"Elias\", \"Gabe\", \"Harper\"]\n",
-        "grades = [\"pass\", \"pass\", \"fail\", \"pass\"]"
+        "grades = [\"pass\", \"pass\", \"fail\", \"pass\"]\n",
+        "any([grade == \"pass\" for grade in grades])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "rlw5sizx39ca"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 16,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "#TODO Determine if all of the students passed the test\n"
+        "#TODO Determine if all of the students passed the test\n",
+        "all([grade == \"pass\" for grade in grades])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "mkgPTZy_39cc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "#TODO verify that all row of data has no errors in the data\n",
+        "#TODO verify that all row of data has no errors == False in the data\n",
         "columns = ['Gender', 'age', 'adult', 'title']\n",
         "data = [\n",
         "    ['Male', 22, True, 'Instructor'],\n",
@@ -393,7 +516,8 @@
         "    ['Female', 18, True, 'Student'],\n",
         "    [None, None, None, 'Student']\n",
         "]\n",
-        "\n"
+        "\n",
+        "all([all(lists) for lists in data])\n"
       ]
     },
     {
@@ -490,27 +614,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "MRuWl8d139cc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#TODO verify the `var` is an instance of a list\n",
         "var = [1,2,3,4,5]\n",
+        "isinstance(var, list)\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "id": "--I8HFuh39cc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 26,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#TODO verify that all of the elements in the list are numbers\n",
-        "var = [.1j, 5, 10, 44.44, 23, '66']\n"
+        "var = [.1j, 5, 10, 44.44, 23, 66]\n",
+        "all([isinstance(element, (int, float, complex)) for element in var ])\n"
       ]
     },
     {
@@ -522,7 +670,7 @@
         "# Sorted and reversed\n",
         "\n",
         "* The `sorted` function is used to sort an iterable object\n",
-        "* The `reversed` method is used to reverse an iterable object\n",
+        "* The `reversed` function is used to reverse an iterable object\n",
         "\n",
         "The sorted method has some extra parameters so that you can do more controlled sorting (like sorting a dictionary by value), but we'll look at that more in depth when we talk about calback functions.\n",
         "\n",
@@ -536,30 +684,115 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "id": "JxuJyCMj39cc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[11,\n",
+              " 43,\n",
+              " 175,\n",
+              " 264,\n",
+              " 271,\n",
+              " 273,\n",
+              " 302,\n",
+              " 317,\n",
+              " 328,\n",
+              " 394,\n",
+              " 519,\n",
+              " 519,\n",
+              " 526,\n",
+              " 554,\n",
+              " 589,\n",
+              " 616,\n",
+              " 717,\n",
+              " 737,\n",
+              " 739,\n",
+              " 814,\n",
+              " 884,\n",
+              " 890,\n",
+              " 933,\n",
+              " 940,\n",
+              " 949]"
+            ]
+          },
+          "execution_count": 31,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#TODO Sort the list of randomly generated numbers\n",
         "from random import randint\n",
-        "var = [randint(1, 1000) for _ in range(25)]\n"
+        "var = [randint(1, 1000) for _ in range(25)]\n",
+        "var = sorted(var)\n",
+        "var\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {
+        "id": "W1cIU2sY39cc"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[949,\n",
+              " 940,\n",
+              " 933,\n",
+              " 890,\n",
+              " 884,\n",
+              " 814,\n",
+              " 739,\n",
+              " 737,\n",
+              " 717,\n",
+              " 616,\n",
+              " 589,\n",
+              " 554,\n",
+              " 526,\n",
+              " 519,\n",
+              " 519,\n",
+              " 394,\n",
+              " 328,\n",
+              " 317,\n",
+              " 302,\n",
+              " 273,\n",
+              " 271,\n",
+              " 264,\n",
+              " 175,\n",
+              " 43,\n",
+              " 11]"
+            ]
+          },
+          "execution_count": 32,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "#TODO reverse the list of randomly generated numbers\n",
+        "list(reversed(var))"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "W1cIU2sY39cc"
-      },
+      "metadata": {},
       "outputs": [],
-      "source": [
-        "#TODO reverse the list of randomly generated numbers\n"
-      ]
+      "source": []
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "name": "in_class_demo.ipynb",
+      "provenance": []
+    },
     "interpreter": {
       "hash": "fd61235da8d855c081cbd5d7c6398e4c179a40a950675235256f7f30499f1124"
     },
@@ -580,12 +813,7 @@
       "pygments_lexer": "ipython3",
       "version": "3.9.7"
     },
-    "orig_nbformat": 4,
-    "colab": {
-      "name": "in_class_demo.ipynb",
-      "provenance": [],
-      "include_colab_link": true
-    }
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
