--- a/4. Functions/4.2 Custom functions/in_class_demo.ipynb
+++ b/4. Functions/4.2 Custom functions/in_class_demo.ipynb
@@ -48,9 +48,7 @@
       },
       "outputs": [],
       "source": [
-        "#TODO define a simple function that prints \"Hello world\"\n",
-        "def greeting():\n",
-        "    print(\"Hello, world!\")"
+        "#TODO define a simple function that prints \"Hello world\"\n"
       ]
     },
     {
@@ -80,8 +78,7 @@
       },
       "outputs": [],
       "source": [
-        "#TODO call the 'greeting' function defined above\n",
-        "greeting()"
+        "#TODO call the 'greeting' function defined above\n"
       ]
     },
     {
@@ -92,8 +89,7 @@
       },
       "outputs": [],
       "source": [
-        "#TODO What happens when you try and call a function without parenthesis?\n",
-        "greeting"
+        "#TODO What happens when you try and call a function without parenthesis?\n"
       ]
     },
     {
@@ -141,11 +137,7 @@
       },
       "outputs": [],
       "source": [
-        "#TODO implement a function that takes 2 positional arguments 'name' and 'food' to print out someones favorite food\n",
-        "def fav_food(name, food):\n",
-        "    print(f\"{name}'s favorite food is {food}\")\n",
-        "\n",
-        "fav_food('Gabe', 'steak')"
+        "#TODO implement a function that takes 2 positional arguments 'name' and 'food' to print out someones favorite food\n"
       ]
     },
     {
@@ -156,8 +148,7 @@
       },
       "outputs": [],
       "source": [
-        "#TODO What happens if I give the arguments out of order?\n",
-        "fav_food(\"Steak\", \"gabe\")"
+        "#TODO What happens if I give the arguments out of order?\n"
       ]
     },
     {
@@ -188,8 +179,7 @@
       },
       "outputs": [],
       "source": [
-        "#TODO call the fav_food function using keyword arguments\n",
-        "fav_food(name = \"Gabe\", food = \"pizza\")"
+        "#TODO call the fav_food function using keyword arguments\n"
       ]
     },
     {
@@ -221,11 +211,7 @@
       },
       "outputs": [],
       "source": [
-        "#TODO define a function that adds 2 numbers but the second value has a default of 10\n",
-        "def add(x, y = 10):\n",
-        "    print(x + y)\n",
-        "\n",
-        "add(x = 10)"
+        "#TODO define a function that adds 2 numbers but the second value has a default of 10\n"
       ]
     },
     {
@@ -236,11 +222,7 @@
       },
       "outputs": [],
       "source": [
-        "#TODO define a function that subtracts the default values of 10 and 5\n",
-        "def subtract(x = 10, y = 5):\n",
-        "    print(x - y)\n",
-        "\n",
-        "subtract(y = 10)"
+        "#TODO define a function that subtracts the default values of 10 and 5\n"
       ]
     },
     {
@@ -278,16 +260,7 @@
       },
       "outputs": [],
       "source": [
-        "#TODO redefine the fav_food function and add a docstring that describes the function and its arguments\n",
-        "def fav_food(name, food):\n",
-        "    '''\n",
-        "    This function is used to print out a users favorite food.\n",
-        "\n",
-        "    - name: the name of the user\n",
-        "    - food: the users favorite food\n",
-        "    '''\n",
-        "\n",
-        "    print(f\"{name} favorite food is {food}\")"
+        "#TODO redefine the fav_food function and add a docstring that describes the function and its arguments\n"
       ]
     },
     {
@@ -321,9 +294,7 @@
       "source": [
         "#TODO create a function that returns a list of random numbers between 0 - 100 where the size of the list is dependent\n",
         "# on a length argument \n",
-        "from random import randint\n",
-        "def get_random(length):\n",
-        "    return [randint(0, 100) for _ in range(length)]"
+        "from random import randint\n"
       ]
     },
     {
@@ -372,10 +343,7 @@
       ],
       "source": [
         "#TODO define a function that generates 3 random numbers and returns each of them\n",
-        "def get_numbers():\n",
-        "    return randint(0, 10), randint(0, 10), randint(0, 10)\n",
-        "\n",
-        "x, y, z = get_numbers()\n"
+        "\n"
       ]
     }
   ],
