recursion and lambda

--- a/4. Functions/4.2 Custom functions/in_class_demo.ipynb
+++ b/4. Functions/4.2 Custom functions/in_class_demo.ipynb
@@ -42,13 +42,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "d4kJ-CoPlKkU"
       },
       "outputs": [],
       "source": [
-        "#TODO define a simple function that prints \"Hello world\"\n"
+        "#TODO define a simple function that prints \"Hello world\"\n",
+        "def greeting(): \n",
+        "    print(\"Hello, World!\")\n",
+        "    "
       ]
     },
     {
@@ -72,24 +75,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "F3SH7dTRlKkV"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hello, World!\n"
+          ]
+        }
+      ],
       "source": [
-        "#TODO call the 'greeting' function defined above\n"
+        "#TODO call the 'greeting' function defined above\n",
+        "greeting()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "_llPAd-3lKkV"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<function __main__.greeting()>"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "#TODO What happens when you try and call a function without parenthesis?\n"
+        "#TODO What happens when you try and call a function without parenthesis?\n",
+        "greeting"
       ]
     },
     {
@@ -131,24 +155,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "RUYyltSBlKkW"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Elias's favorite food is sushi\n"
+          ]
+        }
+      ],
       "source": [
-        "#TODO implement a function that takes 2 positional arguments 'name' and 'food' to print out someones favorite food\n"
+        "#TODO implement a function that takes 2 positional arguments 'name' and 'food' to print out someones favorite food\n",
+        "def fav_food(name, food):\n",
+        "    print(f\"{name}'s favorite food is {food}\")\n",
+        "\n",
+        "fav_food(\"Elias\", 'sushi')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "aE1toK2WlKkW"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Steak's favorite food is Gabe\n"
+          ]
+        }
+      ],
       "source": [
-        "#TODO What happens if I give the arguments out of order?\n"
+        "#TODO What happens if I give the arguments out of order?\n",
+        "fav_food(\"Steak\", \"Gabe\")"
       ]
     },
     {
@@ -173,13 +218,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "UFXGTdKqlKkW"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "gabe's favorite food is steak\n"
+          ]
+        }
+      ],
       "source": [
-        "#TODO call the fav_food function using keyword arguments\n"
+        "#TODO call the fav_food function using keyword arguments\n",
+        "fav_food(food = \"steak\", name = \"gabe\")"
       ]
     },
     {
@@ -205,24 +259,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "Az0p9eNQlKkW"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "23\n"
+          ]
+        }
+      ],
       "source": [
-        "#TODO define a function that adds 2 numbers but the second value has a default of 10\n"
+        "#TODO define a function that adds 2 numbers but the second value has a default of 10\n",
+        "def add(x, y = 10):\n",
+        "    print(x + y)\n",
+        "\n",
+        "add(y = 11, x = 12)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "It2NZcK-lKkW"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-30\n"
+          ]
+        }
+      ],
       "source": [
-        "#TODO define a function that subtracts the default values of 10 and 5\n"
+        "#TODO define a function that subtracts the default values of 10 and 5\n",
+        "def sub(x = 10, y = 5):\n",
+        "    print(x - y)\n",
+        "\n",
+        "sub(x = 50, y = 80)"
       ]
     },
     {
@@ -260,7 +338,16 @@
       },
       "outputs": [],
       "source": [
-        "#TODO redefine the fav_food function and add a docstring that describes the function and its arguments\n"
+        "#TODO redefine the fav_food function and add a docstring that describes the function and its arguments\n",
+        "def fav_food(name, food):\n",
+        "    \"\"\"\n",
+        "        This function will output the persons name and favorite food.\n",
+        "            - name: it is the persons name\n",
+        "            - food: the persons favorite food\n",
+        "    \"\"\"\n",
+        "    print(f\"{name}'s favorite food is {food}\")  \n",
+        "        \n",
+        "fav_food()"
       ]
     },
     {
@@ -286,15 +373,56 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "id": "H0bcliqUlKkb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[29, 73, 12, 63, 42, 54, 7, 45, 64, 64]"
+            ]
+          },
+          "execution_count": 28,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#TODO create a function that returns a list of random numbers between 0 - 100 where the size of the list is dependent\n",
         "# on a length argument \n",
-        "from random import randint\n"
+        "from random import randint\n",
+        "def random_numbers(length):\n",
+        "    return [randint(0, 100) for _ in range(length)]\n",
+        "\n",
+        "random_numbers(10)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 30,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 30,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "def isItBiggerThan10(num):\n",
+        "    if num > 10:\n",
+        "        return True\n",
+        "    else:\n",
+        "        return False\n",
+        "\n",
+        "isItBiggerThan10(90)"
       ]
     },
     {
@@ -324,7 +452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "id": "_9s8BRdflKkc",
         "outputId": "51bdea71-61be-4d56-e223-4e48536c9baf"
@@ -333,18 +461,33 @@
         {
           "data": {
             "text/plain": [
-              "10"
+              "30"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 36,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "#TODO define a function that generates 3 random numbers and returns each of them\n",
-        "\n"
+        "def return_many():\n",
+        "    return 10, 20, 30\n",
+        "\n",
+        "val1, val2, val3 = return_many()\n",
+        "val3\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
