--- a/4. Functions/4.2 Custom functions/cust_functions_tasks.ipynb
+++ b/4. Functions/4.2 Custom functions/cust_functions_tasks.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Gabe-flomo/Python-Course/blob/main/Modules/4.%20Functions/4.2%20Custom%20functions/cust_functions_tasks.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "yLxQtJIdk06X"
       },
@@ -90,16 +90,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "OdBznLeck06X"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[[42, 48, 76, 32, 42, 49, 4, 21, 67, 34],\n",
+              " [23, 46, 58, 20, 78, 77, 96, 75, 83, 35],\n",
+              " [21, 6, 8, 0, 17, 32, 16, 31, 85, 67],\n",
+              " [5, 3, 40, 100, 17, 77, 41, 16, 43, 18],\n",
+              " [51, 89, 31, 96, 42, 9, 62, 56, 35, 46]]"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#TODO: Create function here\n",
         "\n",
         "\n",
-        "#TODO: Create list of lists here"
+        "#TODO: Create list of lists here\n"
       ]
     },
     {
@@ -136,9 +151,7 @@
         "id": "d6F6sRFkk06X"
       },
       "outputs": [],
-      "source": [
-        "#TODO: function goes here"
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -247,26 +260,43 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "#TODO"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "pEZnhiZrk22x"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#TODO"
+      ]
     }
   ],
   "metadata": {
-    "language_info": {
-      "name": "python"
-    },
-    "orig_nbformat": 4,
     "colab": {
+      "include_colab_link": true,
       "name": "cust_functions_tasks.ipynb",
-      "provenance": [],
-      "include_colab_link": true
-    }
+      "provenance": []
+    },
+    "interpreter": {
+      "hash": "f1a916808f2d29f1a5fbd48aa1cb9129993ca703ecce713879d0cd946e898e32"
+    },
+    "kernelspec": {
+      "display_name": "Python 3.9.7 64-bit ('legacy': conda)",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.7"
+    },
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
